--- a/esp8266/data/css/default.css
+++ b/esp8266/data/css/default.css
@@ -214,6 +214,7 @@ body {
 }
 
 .sectorTable pre {
+  overflow: hidden;
   margin: 0px;
   padding: 0px;
   margin-top: 1px;
